docs/versions/4.21/groups/M25.md
---
layout: group
group_id: M25
version: "4.21"
---

> **Remediation required.** This group (4 checks) fails on vanilla RHCOS 9.8 and requires MachineConfig remediation. Verified on cnfdt16 (OCP 4.22, RHCOS 9.8) with compliance-operator v1.8.2.

## Overview

Hardens time synchronization by restricting chrony to client-only mode, disabling the chronyc network interface, setting maximum poll intervals, and requiring multiple NTP servers for resilience.

**Profile**: NIST 800-53 Moderate (`rhcos4-moderate`)

## Compliance Checks

| Check | Description |
|-------|-------------|
| `client-only` | Restrict chrony to client mode (no serving) |
| `no-chronyc-network` | Disable chronyc network command interface |
| `or-ntpd-set-maxpoll` | Set maximum NTP polling interval |
| `or-ntpd-specify-multiple-servers` | Require multiple NTP servers |

## Verification

```bash
oc debug node/<node> -- chroot /host chronyc sources
```
