docs/versions/4.22/groups/M25.md
---
layout: group
group_id: M25
version: "4.22"
---

> **No remediation needed on RHCOS 9.8+ (OCP 4.22+).** These checks PASS on vanilla RHCOS 9.8 due to hardened OS defaults shipped in that version. Older RHCOS versions (9.6 and earlier) still require remediation. Verified with compliance-operator v1.8.2 and pinned content [quay.io/bapalm/k8scontent:v0.1.80](https://quay.io/repository/bapalm/k8scontent).

## Overview

Hardens time synchronization by restricting chrony to client-only mode, disabling the chronyc network interface, setting maximum poll intervals, and requiring multiple NTP servers for resilience.

**Profile**: NIST 800-53 Moderate (`rhcos4-moderate`)

## Compliance Checks

| Check | Description |
|-------|-------------|
| `client-only` | Restrict chrony to client mode (no serving) |
| `no-chronyc-network` | Disable chronyc network command interface |
| `or-ntpd-set-maxpoll` | Set maximum NTP polling interval |
| `or-ntpd-specify-multiple-servers` | Require multiple NTP servers |

## Verification

```bash
oc debug node/<node> -- chroot /host chronyc sources
```
